slot page changed

--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/header.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/header.html
@@ -63,10 +63,10 @@
                                         <a class="nav-link" href="/">Home
 												<div class="mr-hover-effect"></div></a>
                                     </li>
-                                    <li class="nav-item">
+                                    {% comment %} <li class="nav-item">
                                         <a class="nav-link" href="/slots">Slots
 												<div class="mr-hover-effect"></div></a>
-                                    </li>
+                                    </li> {% endcomment %}
                                     <li class="nav-item">
                                         <a class="nav-link" href="/slotlist">Slotlist
 												<div class="mr-hover-effect"></div></a>
