--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/index.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/index.html
@@ -115,7 +115,7 @@
                             Try to check out our
                         </h5>
                         <h2 class="title">
-                            featured games
+                            featured slots
                         </h2>
                         <p class="text">
                             Check out our latest featured game! To meet today's challenges & earn cryptocurrency. Top 10 players receive prizes every hour!
@@ -141,6 +141,60 @@
                         <div class="item">
                             <div class="single-game">
                                 <img src="{% static 'wheelspin/assets/images/game/icon3.png' %}" alt="">
+                                <a href="#" class="mybtn2">PLay NoW !</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="single-game">
+                                <img src="{% static 'wheelspin/assets/images/game/icon2.png' %}" alt="">
+                                <a href="#" class="mybtn2">PLay NoW !</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="single-game">
+                                <img src="{% static 'wheelspin/assets/images/game/icon2.png' %}" alt="">
+                                <a href="#" class="mybtn2">PLay NoW !</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="single-game">
+                                <img src="{% static 'wheelspin/assets/images/game/icon2.png' %}" alt="">
+                                <a href="#" class="mybtn2">PLay NoW !</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="single-game">
+                                <img src="{% static 'wheelspin/assets/images/game/icon2.png' %}" alt="">
+                                <a href="#" class="mybtn2">PLay NoW !</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="single-game">
+                                <img src="{% static 'wheelspin/assets/images/game/icon2.png' %}" alt="">
+                                <a href="#" class="mybtn2">PLay NoW !</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="single-game">
+                                <img src="{% static 'wheelspin/assets/images/game/icon2.png' %}" alt="">
+                                <a href="#" class="mybtn2">PLay NoW !</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="single-game">
+                                <img src="{% static 'wheelspin/assets/images/game/icon2.png' %}" alt="">
+                                <a href="#" class="mybtn2">PLay NoW !</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="single-game">
+                                <img src="{% static 'wheelspin/assets/images/game/icon2.png' %}" alt="">
+                                <a href="#" class="mybtn2">PLay NoW !</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="single-game">
+                                <img src="{% static 'wheelspin/assets/images/game/icon2.png' %}" alt="">
                                 <a href="#" class="mybtn2">PLay NoW !</a>
                             </div>
                         </div>
