--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/prejoin.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/prejoin.html
@@ -53,10 +53,10 @@
                                             </div>
                                             <div class="right">
                                                 <h4 class="title">
-                                                    Slot Name
+                                                    Slot: 500$
                                                 </h4>
                                                 <p class="text">
-                                                    Capacity
+                                                    Capacity: 70
                                                 </p>
                                             </div>
                                         </div>
