--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/room.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/room.html
@@ -66,7 +66,7 @@
                                                 {{activeCouter}}
                                             </div>
                                             <div class="pp">
-                                                <a href="/leave/{{room_name}}" class="mybtn1">Leave</a>
+                                                <h1  onclick="leave()" class="mybtn1">Leave</h1>
                                             </div>
                                         </div>
                                     </div>
