--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/slots.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/slots.html
@@ -42,8 +42,8 @@
                             <div class="row">
                                 <!-- bmar -->
                                 {% for e in lof %}
-                                <div class="col-lg-4 col-md-6">
-                                    <div class="single-activities">
+                                <div class="col-lg-6 col-md-6">
+                                    <div class="single-activities" style="margin-top: 40px;">
                                         <div class="top-area">
                                             <div class="left">
                                                 <div class="icon">
