--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/inplay.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/inplay.html
@@ -75,7 +75,7 @@
                                                                         {{room.total}}
                                                                     </td>
                                                                     <td>
-                                                                        <a href="/games/reqForROOM/{{room.bet}}/{{room.total}}">
+                                                                        <a href="/games/{{room.room_name}}">
                                                                             <button style="background-color: #f0ad4e; color: black; padding: 5px 40px; border-radius: 14px; outline: none; border: none;">Return</button>
                                                                         </a>
                                                                     </td>
