--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/gameresults.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/gameresults.html
@@ -87,33 +87,39 @@
                                             <th scope="col">Capacity</th>
                                             <th scope="col">Result</th>
                                             <th scope="col">Charge</th>
-                                            <th scope="col">Balance</th>
                                             <th scope="col">Time</th>
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        {% for result in results%}
                                         <tr>
                                             <td>
-                                                <img src="{% static 'wheelspin/assets/images/people/p1.png' %}" alt=""> Tom Bass
+                                                
+                                                <img src="{% static 'wheelspin/assets/images/icon1.png' %}" alt=""> {{result.slot}}
                                             </td>
                                             <td>
-                                                b799b8724b
+                                                {{result.capcity}}
                                             </td>
                                             <td>
-                                                <img src="{% static 'wheelspin/assets/images/icon1.png' %}" alt=""> 0.00000051
+                                                {{result.result}}
                                             </td>
-                                            <td>70%</td>
-                                            <td>Dice</td>
-                                            <td>
-                                                <img src="{% static 'wheelspin/assets/images/icon1.png' %}" alt=""> 0.00000051
-                                            </td>
+                                            <td>{{result.charge}}</td>
+                                            <td>{{result.time}}</td>
+                                        
                                         </tr>
+                                        {% endfor %}
                                         <tr>
+                                            {% if preid >= 0 %}
                                             <td colspan=3 style="text-align:center;">
-                                                <a href="/gameresults" class="mybtn1">Previous</a>
+                                                <a href="/gameresults/pre/{{preid}}/" class="mybtn1">Previous</a>
                                             </td>
+                                            {% else %}
                                             <td colspan=3 style="text-align:center;">
-                                                <a href="/gameresults" class="mybtn1">Next</a>
+                                                
+                                            </td>
+                                            {% endif %}
+                                            <td colspan=3 style="text-align:center;">
+                                                <a href="/gameresults/next/{{nextid}}/" class="mybtn1">Next</a>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -123,183 +129,6 @@
                 </div>
             </div>
         </div>
-        <!-- Fun fact Area Start -->
-        <div class="funfact">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="single-fun">
-                            <img src="{% static 'wheelspin/assets/images/funfact/icon1.png' %}" alt="">
-                            <div class="count-area">
-                                <div class="count">93K</div>
-                            </div>
-                            <p>
-                                Players
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="single-fun">
-                            <img src="{% static 'wheelspin/assets/images/funfact/icon2.png' %}" alt="">
-                            <div class="count-area">
-                                <div class="count">99+</div>
-                            </div>
-                            <p>
-                                Games
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="single-fun">
-                            <img src="{% static 'wheelspin/assets/images/funfact/icon3.png' %}" alt="">
-                            <div class="count-area">
-                                <div class="count">70+</div>
-                            </div>
-                            <p>
-                                Winners
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Fun fact Area End -->
-    </section>
-    <!-- Latest Activities Area End -->
-
-
-    <!-- Get Start Area Start -->
-    <section class="get-start">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 d-flex align-self-center">
-                    <div class="left-area">
-                        <div class="section-heading">
-                            <h5 class="subtitle">
-                                every day lots of wins
-                            </h5>
-                            <h2 class="title ">
-                                be one of them
-                            </h2>
-                            <p class="text">
-                                Get started in less than 5 min - no credit card required.Gain early access to Dooplo and experience crypto like never before.
-                            </p>
-                            <a href="#" class="mybtn1">Play  Now!</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-5">
-                    <div class="right-image">
-                        <img src="{% static 'wheelspin/assets/images/get-start.png' %}" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Get Start Area End -->
-
-    <!-- Recent Winners Area Start -->
-    <section class="recent-winners">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8 col-md-10">
-                    <div class="section-heading">
-                        <h5 class="subtitle">
-                            Try to Check out our
-                        </h5>
-                        <h2 class="title">
-                            Recent Winners
-                        </h2>
-                        <p class="text">
-                            We update our site regularly; more and more winners are added every day! To locate the most recent winner's information
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="single-winer">
-                        <div class="top-area">
-                            <div class="left">
-                                <h4 class="name">
-                                    Leroy Roy
-                                </h4>
-                                <p class="date">
-                                    01.08.2019
-                                </p>
-                            </div>
-                            <div class="right">
-                                <p class="id">#5747e75482</p>
-                            </div>
-                        </div>
-                        <div class="bottom-area">
-                            <div class="left">
-                                0.099 ETH
-                            </div>
-                            <div class="right">
-                                <img src="{% static 'wheelspin/assets/images/icon2.png' %}" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-winer">
-                        <div class="top-area">
-                            <div class="left">
-                                <h4 class="name">
-                                    Jeff Mack
-                                </h4>
-                                <p class="date">
-                                    01.08.2019
-                                </p>
-                            </div>
-                            <div class="right">
-                                <p class="id">#5747e75482</p>
-                            </div>
-                        </div>
-                        <div class="bottom-area">
-                            <div class="left">
-                                0.099 ETH
-                            </div>
-                            <div class="right">
-                                <img src="{% static 'wheelspin/assets/images/icon2.png' %}" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-winer">
-                        <div class="top-area">
-                            <div class="left">
-                                <h4 class="name">
-                                    Neal Morris
-                                </h4>
-                                <p class="date">
-                                    01.08.2019
-                                </p>
-                            </div>
-                            <div class="right">
-                                <p class="id">#5747e75482</p>
-                            </div>
-                        </div>
-                        <div class="bottom-area">
-                            <div class="left">
-                                0.099 ETH
-                            </div>
-                            <div class="right">
-                                <img src="{% static 'wheelspin/assets/images/icon2.png' %}" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 text-xl-center">
-                    <a class="mybtn2" href="#">View All </a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Recent Winners Area End -->
+        
 
 {% endblock %}
