--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/header.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/header.html
@@ -68,11 +68,11 @@
 												<div class="mr-hover-effect"></div></a>
                                     </li> {% endcomment %}
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/slotlist">Slotlist
+                                        <a class="nav-link" href="/slots">Slots
 												<div class="mr-hover-effect"></div></a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/game">WheelGame
+                                        <a class="nav-link" href="/inplay">In Play
 												<div class="mr-hover-effect"></div></a>
                                     </li>
                                     <li class="nav-item">
