--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/index.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/index.html
@@ -16,10 +16,10 @@
                                 PLay To WIN
                             </h1>
                             <p class="text">
-                                Play, Invest,Exchange and Join the Contest with high rewards at Crypto Wheel Spin!
+                                Create Account, Deposit, Play and Win with high Rewards!
                             </p>
                             <div class="links">
-                                <a href="#" class="mybtn1 link1">Get Started Now!</a>
+                                <a href="/slots/" class="mybtn1 link1">Get Started Now!</a>
                             </div>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                             Latest 10
                         </h2>
                         <p class="text">
-                            The World's First Crypto Wheel Spin Game
+                            The World's Most Popular Crypto Wheel Spin Game
                         </p>
                     </div>
                 </div>
@@ -285,7 +285,7 @@
                         <div class="single-fun">
                             <img src="{% static 'wheelspin/assets/images/funfact/icon1.png' %}" alt="">
                             <div class="count-area">
-                                <div class="count">93K</div>
+                                <div class="count">23K</div>
                             </div>
                             <p>
                                 Players
@@ -307,10 +307,10 @@
                         <div class="single-fun">
                             <img src="{% static 'wheelspin/assets/images/funfact/icon3.png' %}" alt="">
                             <div class="count-area">
-                                <div class="count">70+</div>
+                                <div class="count">136k+</div>
                             </div>
                             <p>
-                                Winners
+                                Wins
                             </p>
                         </div>
                     </div>
@@ -336,7 +336,7 @@
                                 be one of them
                             </h2>
                             <p class="text">
-                                Get started in less than 5 min - no credit card required.Gain early access to Dooplo and experience crypto like never before.
+                                Get started in less than 5 min. Gain early access to Crypto Wheel Spin, Deposit with crypto and experience crypto-game like never before.
                             </p>
                             <a href="#" class="mybtn1">Play  Now!</a>
                         </div>
@@ -352,108 +352,6 @@
     </section>
     <!-- Get Start Area End -->
 
-    <!-- Recent Winners Area Start -->
-    <section class="recent-winners">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8 col-md-10">
-                    <div class="section-heading">
-                        <h5 class="subtitle">
-                            Try to Check out our
-                        </h5>
-                        <h2 class="title">
-                            Recent Winners
-                        </h2>
-                        <p class="text">
-                            We update our site regularly; more and more winners are added every day! To locate the most recent winner's information
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="single-winer">
-                        <div class="top-area">
-                            <div class="left">
-                                <h4 class="name">
-                                    Leroy Roy
-                                </h4>
-                                <p class="date">
-                                    01.08.2019
-                                </p>
-                            </div>
-                            <div class="right">
-                                <p class="id">#5747e75482</p>
-                            </div>
-                        </div>
-                        <div class="bottom-area">
-                            <div class="left">
-                                0.099 ETH
-                            </div>
-                            <div class="right">
-                                <img src="{% static 'wheelspin/assets/images/icon2.png' %}" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-winer">
-                        <div class="top-area">
-                            <div class="left">
-                                <h4 class="name">
-                                    Jeff Mack
-                                </h4>
-                                <p class="date">
-                                    01.08.2019
-                                </p>
-                            </div>
-                            <div class="right">
-                                <p class="id">#5747e75482</p>
-                            </div>
-                        </div>
-                        <div class="bottom-area">
-                            <div class="left">
-                                0.099 ETH
-                            </div>
-                            <div class="right">
-                                <img src="{% static 'wheelspin/assets/images/icon2.png' %}" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="single-winer">
-                        <div class="top-area">
-                            <div class="left">
-                                <h4 class="name">
-                                    Neal Morris
-                                </h4>
-                                <p class="date">
-                                    01.08.2019
-                                </p>
-                            </div>
-                            <div class="right">
-                                <p class="id">#5747e75482</p>
-                            </div>
-                        </div>
-                        <div class="bottom-area">
-                            <div class="left">
-                                0.099 ETH
-                            </div>
-                            <div class="right">
-                                <img src="{% static 'wheelspin/assets/images/icon2.png' %}" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 text-xl-center">
-                    <a class="mybtn2" href="#">View All </a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Recent Winners Area End -->
+    
 
 {% endblock %}
